06-WEB/0x0A-HashCollision-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hash-collision
  labels:
    app: hash-collision
spec:
  ports:
    - name: http-port
      port: 9000
  selector:
    app: hash-collision
